Translated more pages to ES

--- a/src/locales/es/alexandria.json
+++ b/src/locales/es/alexandria.json
@@ -13,7 +13,7 @@
     },
     "modal": {
       "title": "Alexandria",
-      "text": "There are two sphinxes at the Pompey's Pillar site in Alexandria, Egypt. The sphinxes and associated column are one of Alexandria's most important ancient monuments. <0/><0/> The Alexandria sphinxes should not be confused with the more well-known Great Sphinx located at Giza, just under 200 kilometers south-east of Alexandria."
+      "text": "Hay dos esfinges en el sitio del Pilar de Pompeyo en Alejandía, Egípto. Las esfinges y las columnas asociadas son uno de los monumentos más antiguos e importantes de Alejandria. <0/><0/> La esfinge de alejandria no debe confundirse con la Gran Essfinge ubicada en Giza, a poco menos de 200km al suroeste de Alejandra."
     },
     "criticalDocuments": {
       "title": "Documentos críticos",
@@ -49,7 +49,7 @@
     },
     "map": {
       "title": "Alexandria",
-      "text": "<0>Alexandria was founded in approximately 331 BC by Alexander the Great.</0> The city was best known for the Lighthouse of Alexandria, one of the Seven Wonders of the Ancient World, as well as its colossal Great Library.<1/><1/> Alexandria was the intellectual and cultural center of the ancient Mediterranean world for much of the Hellenistic age and late antiquity. It was at one time the largest city in the ancient world before being eventually overtaken by Rome.<1/><1/><2><0/> Read the blog post</2>"
+      "text": "<0>Alejandría fue fundada aproximadamente en el 331 a. C. por Alejandro Magno.</0> La ciudad era más conocida por el Faro de Alejandría, una de las Siete Maravillas del Mundo Antiguo, asi como por su colosal Gran Biblioteca.<1/><1/> Alejandría era el centro intelectual y cultural del antguo mundo mediterráneo para gran parte de la época helenística y de la antigüedad tardía. En su momento era la ciudad más grande del mundo antiguo antes de ser superada finalmente por Roma.<1/><1/><2><0/> Lea el artículo subido</2>"
     }
   }
 }
