--- a/src/locales/es/babylon.json
+++ b/src/locales/es/babylon.json
@@ -49,7 +49,7 @@
     },
     "map": {
       "title": "Babilonia",
-      "text": "<0>Babilonia fue la ciudad capital del Imperio Babilónico, un reino en la antigua Mesopotamia hace casi 4000 años.</0> Fue construida a lo largo de las orillas izquierda y derecha del río Éufrates con terraplenes empinados para contener las inundaciones estacionales del río. <1/><1/> La ciudad se considera de gran importancia histórica y cultural. Los Jardines Colgantes de Babilonia fueron una de las Siete Maravillas del Mundo Antiguo y Babilonia también fue supuestamente el sitio de la Torre de Babel.<1/><1/><2><0/> Lea la entrada del blog</2>"
+      "text": "<0>Babilonia fue la ciudad capital del Imperio Babilónico, un reino en la antigua Mesopotamia hace casi 4000 años.</0> Fue construida a lo largo de las orillas izquierda y derecha del río Éufrates con terraplenes empinados para contener las inundaciones estacionales del río. <1/><1/> La ciudad se considera de gran importancia histórica y cultural. Los Jardines Colgantes de Babilonia fueron una de las Siete Maravillas del Mundo Antiguo y Babilonia también fue supuestamente el sitio de la Torre de Babel.<1/><1/><2><0/> Lea el artículo subido</2>"
     }
   }
 }
