--- a/src/locales/es/get-started.json
+++ b/src/locales/es/get-started.json
@@ -1,56 +1,56 @@
 {
   "getStarted": {
     "siteMetadata": {
-      "title": "Getting Started",
-      "description": "Learn how to contribute and participate to the Joystream project"
+      "title": "Como empezar",
+      "description": "Conozca cómo contribuir y participar en el proyecto Joystream"
     },
     "hero": {
-      "title": "How to Contribute and Participate",
-      "subtitle": "Read more about the current ways you can add value to the project and earn rewards for doing so.",
-      "buttonText": "View opportunities",
-      "imageAlt": "getting started hero"
+      "title": "Cómo contribuir y participar",
+      "subtitle": "Lea más sobre las formas actuales de añadir valor al proyecto y ganar recompensas por hacerlo.",
+      "buttonText": "Ver oportunidades",
+      "imageAlt": "empezar a ser un héroe"
     },
     "howToStart": {
-      "title": "How to start",
-      "discord": "Join our Discord",
-      "tokens": "Receive free testnet tokens",
-      "membership": "Create membership on-chain",
-      "opportunities": "Pick one of the opportunities below"
+      "title": "Cómo empezar",
+      "discord": "Únase a nuestro Discord",
+      "tokens": "Reciba tokens de nuestra testnet gtaris",
+      "membership": "Crear afiliación en la cadena",
+      "opportunities": "Elija una de las siguientes actividades"
     },
     "opportunities": {
       "title": "Oportunidades",
       "bounties": {
-        "title": "Bounties",
-        "text": "Bounties are long running tasks which anyone can attempt to tackle in a exchange for some reward. They are created either by Jsgenesis, or by the Council.",
-        "imageAlt": "money pouch"
+        "title": "Recompensas",
+        "text": "Las bonificacionesse dan por hacer tardeas que cualquiera puede intentar abordar a cambio de alguna recompensa. Son creadas por Jsgenesis o por el Consejo.",
+        "imageAlt": "bolsa de dinero"
       },
       "bountiesCarousel": {
-        "all": "All",
-        "coding": "Coding",
-        "design": "Design",
+        "all": "Todo",
+        "coding": "Codificador",
+        "design": "Diseñador",
         "marketing": "Marketing",
-        "research": "Research",
-        "contentCreation": "Content Creation"
+        "research": "Investiga",
+        "contentCreation": "Creador de contenido"
       },
       "roles": {
-        "title": "Roles",
-        "text": "Our current testnet also allows you to participate in some of the platform roles which will be available on mainnet.<0/><0/>Participation in these roles is rewarded in tJOY (our testnet token) which is backed by fiat reserves at Jsgenesis and redeemable for bitcoin cash.",
-        "imageAlt": "masks"
+        "title": "Funciones",
+        "text": "Nuestra actual red de pruebas también le permite participar en algunas de las funciones de la plataforma que estarán disponibles en la red principal.<0/><0/>La participación en estas funciones se recompensa con tJOY (nuestro token de testnet), que está respaldado por las reservas fiat de Jsgenesis y es canjeable por bitcoin cash.",
+        "imageAlt": "máscaras"
       }
     },
     "activeRoles": {
-      "title": "Active roles on the current testnet",
-      "validatorText": "A Validator is an actor which checks the validity of newly constructed blocks, proposes new blocks and participates in the consensus process for committing new block to the chain. Validators are typically paid a fixed amount for each block produced. This role has a purpose very similar to that of the miners in the Bitcoin blockchain.",
-      "councilMemberText": "Council Members are elected by stakeholders in the system to act in the long-term interest of the platform. They are responsible for allocating resources, and hiring working group leads to run the platform's day-to-day operations. This is done through the proposal system, allowing any user to submit suggestions for changing the platform in some way.",
-      "storageProviderText": "There are critical platform assets that do not live on the blockchain, such as content media. The integrity of these assets is secured by the chain, but a separate set of storage and distribution nodes enable uploading and downloading of such data. The Storage Provider is involved this activity, specifically by storing large quantities of data.",
-      "storageLeadText": "The Storage Lead is hired directly by the Council through the proposals system and is dedicated to the hiring, firing and wider management of Storage Providers on the network.",
-      "contentCuratorText": "Content Curators are responsible for monitoring the publishing of new content into the content directory, and responding to reports about contested publications. They must also update information on content to ensure it is accurate, with correct metadata. Collaborating with Builders to improve tools and user-facing experiences is another significant part of the role.",
-      "contentCreatorText": "Content Creators are those platform participants who have decided to contribute their own original (or third-party licensed) content to the platform. There are no direct incentives for this informal role at this time, though effective contributors are very likely to be rewarded through the Founding Member Program.",
-      "contentLeadText": "The Council has the power to appoint a Content Curator Lead for the network who can hire further Content Curators. The Content Lead also decides on priorities for curation. If necessary, upon discussing with the council, the Lead can also decide to fire curators who are not performing their jobs adequately."
+      "title": "Funciones activas en la red de pruebas actual",
+      "validatorText": "Un validador es un actor que comprueba la validez de los bloques recién construidos, propone nuevos bloques y participa en el proceso de consenso para incorporar nuevos bloques a la cadena. A los validadores se les suele pagar una cantidad fija por cada bloque producido. Este papel tiene un propósito muy similar al de los mineros en la cadena de bloques de Bitcoin.",
+      "councilMemberText": "Los miembros del Consejo son elegidos por las partes interesadas en el programa para que actúen en interés de la plataforma a largo plazo. Son responsables de asignar recursos y de contratar a los líderes de los grupos de trabajo para que dirijan las operaciones diarias de la plataforma. Esto se hace a través del sistema de propuestas, que permite a cualquier usuario presentar sugerencias para cambiar la plataforma de alguna manera.",
+      "storageProviderText": "Hay activos críticos de la plataforma que no viven en la cadena de bloques, como los contenidos multimedia. La integridad de estos activos está asegurada por la cadena, pero un conjunto separado de nodos de almacenamiento y distribución permite cargar y descargar dichos datos. El proveedor de almacenamiento participa en esta actividad, concretamente almacenando grandes cantidades de datos.",
+      "storageLeadText": "El Líder de Almacenamiento es contratado directamente por el Consejo a través del sistema de propuestas y se dedica a la contratación, despido y gestión más amplia de los Proveedores de Almacenamiento en la red.",
+      "contentCuratorText": "Los curadores de contenidos son responsables de supervisar la publicación de nuevos contenidos en el directorio de contenidos, y de responder a los informes sobre publicaciones impugnadas. También deben actualizar la información sobre los contenidos para asegurarse de que son precisos, con metadatos correctos. La colaboración con los constructores para mejorar las herramientas y las experiencias de los usuarios es otra parte importante de la función.",
+      "contentCreatorText": "Los creadores de contenidos son aquellos participantes en la plataforma que han decidido aportar sus propios contenidos originales (o con licencia de terceros) a la plataforma. Por el momento no hay incentivos directos para esta función informal, aunque es muy probable que los contribuyentes efectivos sean recompensados a través del Programa de Miembros Fundadores.",
+      "contentLeadText": "El Consejo está facultado para nombrar a un responsable de la gestión de contenidos de la red, que puede contratar a otros gestores de contenidos. El responsable de contenidos también decide las prioridades de conservación. Si es necesario, y tras debatirlo con el consejo, el responsable también puede decidir el despido de los conservadores que no realicen su trabajo adecuadamente."
     },
     "roleCard": {
-      "overview": "Overview",
-      "buttonText": "Check details on GitHub"
+      "overview": "Visión general",
+      "buttonText": "Consulte los detalles en GitHub"
     }
   }
 }
