--- a/src/locales/es/sparta.json
+++ b/src/locales/es/sparta.json
@@ -5,37 +5,37 @@
     },
     "hero": {
       "title": "Red de Sparta",
-      "text": "Explore available roles and pick the one that suits you best. Influence the platform's development and earn real money in the process.",
-      "chipText": "What is this?"
+      "text": "Explora las funciones disponibles y elige la que más te convenga. Influya en el desarrollo de la plataforma y gana dinero real en el proceso.",
+      "chipText": "¿que es esto?"
     },
     "heroCard": {
       "title": "NETWORK DOWN",
-      "markdown": "\n ### FAILURE IDENTIFIED\n\n  On Friday the 29th of March, the Sparta network went down due to a [known bug in substrate](https://github.com/paritytech/substrate/pull/2130) that we had not pulled down before release.\n\n  More details can be found in this [blog post](https://blog.joystream.org/sparta-sacked/)."
+      "markdown": "\n ### FALLO IDENTIFICADO\n\n  El viernes 29 de marzo, la red Sparta se cayó debido a un [error conocido en el sustrato](https://github.com/paritytech/substrate/pull/2130) que no habíamos retirado antes del lanzamiento..\n\n Puede encontrar más detalles en esta [entrada del blog](https://blog.joystream.org/sparta-sacked/)."
     },
     "modal": {
-      "title": "Helmet of Sparta",
-      "text": "<0>The Spartan army helmet</0> represents what Sparta is most known for today, their military might. For it's time, it was also known for its advanced governance system."
+      "title": "Casco de Esparta",
+      "text": "<0>El casco del ejército espartano</0> representa aquello por lo que Esparta es más conocida hoy en día, su poderío militar. Para su época, también era conocida por su avanzado sistema de gobierno."
     },
     "testnetGoals": {
       "title": "Objetivos de la testnet",
-      "subtitle": "The goals below are a simplified representation of the Key Results listed in our release OKR.",
+      "subtitle": "Los objetivos que figuran a continuación son una representación simplificada de los resultados clave que figuran en nuestro comunicado OKR.",
       "goals": {
         "blockchain": {
-          "title": "Build and release a blockchain with a working Council",
-          "text": "As a \"user governed media platform\", allowing users to elect <0>Council Members</0> to represent their interest in day-to-day operations was a major goal for us."
+          "title": "Construir y liberar una cadena de bloques con un Consejo que funcione",
+          "text": "Como \"plataforma mediática gobernada por los usuarios\" permitirles elegir <0>Miembros del Consejo</0> para que representen sus intereses en las operaciones diarias era un objetivo importante para nosotros."
         },
         "bugs": {
-          "title": "Keep the quantity of more or less critical bugs at an acceptable level",
-          "text": "As demonstrated by the fact that the network crashed, we did not reach our goals in this case."
+          "title": "Mantener la cantidad de errores más o menos críticos en un nivel aceptable",
+          "text": "Como puede observar la red se cayó, no alcanzamos nuestros objetivos en este caso."
         }
       }
     },
     "roles": {
-      "title": "Roles available on the Sparta testnet"
+      "title": "Roles disponibles en la red de pruebas de Sparta"
     },
     "map": {
-      "title": "The city of Sparta",
-      "text": "<0>Sparta was a prominent city-state in Ancient Greece.</0> In addition to its military might, it was also unique both for its time and compared to its greek rivals due its defined social system and constitution. <1/><1/> We chose the name Sparta due to it's historical significance in the path towards democracy and rule of law, however draconian by modern standard."
+      "title": "La ciudad de Sparta",
+      "text": "<0>Esparta fue una importante ciudad-estado de la antigua Grecia.</0> Además de su poderío militar, también era única para su época y en comparación con sus rivales griegos debido a su definido sistema social y su constitución. <1/><1/>Elegimos el nombre de Esparta por su importancia histórica en el camino hacia la democracia y el estado de derecho, aunque sea draconiano para los estándares modernos."
     }
   }
 }
