--- a/src/locales/es/token.json
+++ b/src/locales/es/token.json
@@ -2,15 +2,15 @@
   "token": {
     "siteMetadata": {
       "title": "Token",
-      "description": "Participants on our testnets can now earn Joystream Testnet Tokens (tJOYs) backed by fiat currency."
+      "description": "Los participantes en nuestras redes de prueba ahora pueden ganar Joystream Testnet Tokens (tJOYs) respaldados por moneda fiduciaria."
     },
     "hero": {
-      "title": "Understanding the tJOY token",
-      "text": "Participants on our testnets can now earn Joystream Testnet Tokens (tJOYs) backed by fiat currency.",
+      "title": "Comprender el token tJOY",
+      "text": "Los participantes en nuestras redes de prueba ahora pueden ganar Joystream Testnet Tokens (tJOYs) respaldados por moneda fiduciaria.",
       "tokenStats": {
-        "title": "Token in numbers",
-        "exchangeRate": "Exchange Rate",
-        "backingValue": "Backing Value",
+        "title": "Token en número",
+        "exchangeRate": "Tipo de cambio",
+        "backingValue": "Valor de respaldo",
         "supply": "Supply"
       }
     },
@@ -18,50 +18,50 @@
       "title": "Testnet Token Information",
       "whatIsTJoy": {
         "title": "¿Qué es tJOY?",
-        "text": "tJOY (testJOY) is the currency used on Joystream incentivized testnets."
+        "text": "tJOY (testJOY) es la moneda utilizada en las redes de prueba incentivadas de Joystream."
       },
       "tJoyValueOrigin": {
-        "title": "Where does the value of tJOY come from?",
-        "text": "Jsgenesis, the team behind the Joystream project, have linked the total supply of tJOYs to a corresponding pool of fiat currency (USD) held by the company. All testnet participants can redeem their tJOY for USD at any time."
+        "title": "¿De dónde viene el valor de tJOY?",
+        "text": "Jsgenesis, el equipo que está detrás del proyecto Joystream, ha vinculado el suministro total de tJOYs a una reserva correspondiente de moneda fiduciaria (USD) en manos de la empresa. Todos los participantes en la red de pruebas pueden canjear sus tJOY por dólares estadounidenses en cualquier momento. Todos los participantes en la red de pruebas pueden canjear sus tJOY por dólares estadounidenses en cualquier momento."
       },
       "purposeOfTJoy": {
-        "title": "What is the purpose of tJOY?",
-        "text": "tJOY can be used on our testnets in the same ways that future users of the Joystream platform will be able to use the mainnet JOY token. The three principal functions of tJOY are in staking, governance and for payment.<0/><0/> For example, to participate in testnet roles, users may need to stake tJOY. To create governance proposals and vote for Council Members, tJOY is also required. Finally, on the testnet, bounties and KPIs require tJOYs for paying effective contributors."
+        "title": "¿Cuál es el objetivo de tJOY?",
+        "text": "tJOY puede utilizarse en nuestras redes de prueba de la misma manera que los futuros usuarios de la plataforma Joystream podrán utilizar el token JOY de la red principal. Las tres funciones principales de tJOY son la estaca, la gobernanza y el pago.<0/><0/> Por ejemplo, para participar en las funciones de la testnet, los usuarios pueden necesitar estacar tJOY. Para crear propuestas de gobierno y votar a los miembros del Consejo, también se necesita tJOY. Por último, en la testnet, las recompensas y los KPI requieren tJOY para pagar a los contribuyentes efectivos."
       },
       "whereCanTJoyBeObtained": {
-        "title": "Where can I get tJOY?",
-        "text": "There are many opportunities to obtain tJOY. Smaller amounts can be requested in our community channels (including our Discord server and on-chain forum), while larger sums can be accumulated by participating in bounties, competitions and other events."
+        "title": "¿Dónde puedo conseguir tJOY?",
+        "text": "Hay muchas oportunidades para obtener tJOY. Las cantidades más pequeñas se pueden solicitar en nuestros canales de la comunidad (incluyendo nuestro servidor Discord y el foro en la cadena), mientras que las sumas más grandes se pueden acumular participando en recompensas, concursos y otros eventos."
       },
       "linkBetweenTJoyAndFutureToken": {
-        "title": "Is there any link between tJOY and the future mainnet token?",
-        "text": "There is no direct link between tJOY and mainnet JOY. We are using tJOY to simulate the real economic incentives present on mainnet to aid the platform's development and facilitate the growth and education of our community in preparation of the transition from testnet to mainnet."
+        "title": "¿Hay alguna relación entre tJOY y el futuro token de la red principal?",
+        "text": "No existe un vínculo directo entre tJOY y mainnet JOY. Estamos utilizando tJOY para simular los incentivos económicos reales presentes en mainnet para ayudar al desarrollo de la plataforma y facilitar el crecimiento y la educación de nuestra comunidad en la preparación de la transición de testnet a mainnet."
       },
       "howToCashout": {
-        "title": "How do I cashout tJOY to USD?",
-        "text": "We use Bitcoin Cash (BCH) as a payment rail on our testnets. You can cashout tJOY by making a transfer to the dedicated burn address: <0>5D5PhZQNJzcJXVBxwJxZcsutjKPqUPydrvpu6HeiBfMaeKQu</0> Before doing this, you should set the <0>memo</0> of the key from which the transfer is made to your BCH address. At the moment of the transfer, the BCH to USD exchange rate is locked. <1/><1/>More information on payouts can be found <2>here</2>."
+        "title": "¿Cómo puedo cobrar tJOY en USD?",
+        "text": "Utilizamos Bitcoin Cash (BCH) como vía de pago en nuestras redes de prueba. Usted puede cobrar tJOY haciendo una transferencia a la dirección dedicada a la quema: <0>5D5PhZQNJzcJXVBxwJxZcsutjKPqUPydrvpu6HeiBfMaeKQu</0> Antes de hacer esto, debe establecer el <0>memo</0> de la clave desde la que se realiza la transferencia a su dirección BCH. En el momento de la transferencia, el tipo de cambio de BCH a USD está bloqueado. <1/><1/>Puede encontrar más información sobre los pagos <2>aquí</2>."
       },
       "howToEarn": {
-        "title": "How can I earn mainnet JOY?",
-        "text": "Currently, the only way to secure an allocation of mainnet JOY is through high-quality contributions to the platform and community via our <0>Founding Member Program</0>."
+        "title": "¿Cómo puedo ganar la JOY de mainnet?",
+        "text": "Actualmente, la única manera de asegurar una asignación de JOY en la red principal es mediante contribuciones de alta calidad a la plataforma y a la comunidad a través de nuestro <0>Programa de Miembros Fundadores</0>."
       },
       "TJoyWorth": {
-        "title": "How much is tJOY worth?",
-        "text": "You can check the live exchange rate (tJOY->USD) on this page (see above)."
+        "title": "¿Cuánto vale tJOY?",
+        "text": "Puedes comprobar el tipo de cambio en vivo (tJOY->USD) en esta página (ver arriba)."
       }
     },
     "cashouts": {
-      "title": "Pending cashouts",
-      "subtitle": "Tokens sent to Jsgenesis in this exchange are burned, hence the final price of the token is unaffected by such an exchange.",
+      "title": "Cobros pendientes",
+      "subtitle": "Los tokens enviados a Jsgenesis en este intercambio se queman, por lo que el precio final del token no se ve afectado por dicho intercambio.",
       "cashout": {
-        "address": "Source address",
-        "tokensTransferred": "Tokens transferred",
-        "usdValue": "USD Value",
-        "blockNumber": "Block Number",
+        "address": "Dirrección de rigen",
+        "tokensTransferred": "Tokens transferidos",
+        "usdValue": "Valor USD",
+        "blockNumber": "Número de bloque",
         "exchangeNumber": "Exchange #"
       }
     },
     "cta": {
-      "title": "Join our Discord and change the online video industry"
+      "title": "Únete a nuestro Discord y cambia la industria del vídeo online"
     }
   }
 }
