--- a/src/locales/es/manifesto.json
+++ b/src/locales/es/manifesto.json
@@ -1,72 +1,72 @@
 {
   "manifesto": {
     "siteMetadata": {
-      "description": "Read the Joystream Manifesto"
+      "description": "Lea el Manifiesto de Joystream"
     },
     "hero": {
       "title": "El manifiesto de Joystream",
-      "text": "Our Manifesto sets out both the problems we believe are associated with digital media platforms in their current form as well as our proposed solution to these concerns."
+      "text": "Nuestro Manifiesto expone tanto los problemas que, en nuestra opinión, están asociados a las plataformas de medios digitales en su forma actual, como la solución que proponemos para estos problemas."
     },
     "problem": {
-      "title": "Problem",
+      "title": "Problema",
       "text": {
-        "artAsTool": "We believe that art, be it as literature, music, film, games or performance, is a critical tool through which societies establish a shared understanding of what is common knowledge among all members. These expressions define values and narratives that end up shaping culture, faith and even public policy. It therefore matters deeply how it is financed, distributed and paid for.",
-        "mediaAsPrimaryMedium": "Digital media has become the primary medium through which such expression is distributed, and digital media platforms have become the key institutions organizing this activity.",
-        "unaccountableInstitutions": "Unfortunately, due to network effects, economies of scale, regulations and political interests, we are today left with handful of massive institutions which set the terms for how this happens. They are almost entirely unaccountable to normal market and political mechanisms.",
-        "filteredOnTheirTerms": "As a result, our stories, expressions and interactions are managed and filtered on their terms. This continues to generate an ever changing set of problems, be it",
-        "inflexible": "inflexible monetization, censorship of controversial speech, inequitable sharing of gains with creators and audience, low platform innovation or lack of credibility with third party developers."
+        "artAsTool": "Creemos que el arte, ya sea en forma de literatura, música, cine, juegos o actuaciones, es una herramienta fundamental a través de la cual las sociedades establecen una comprensión compartida de lo que es un conocimiento común entre todos sus miembros. Estas expresiones definen valores y narrativas que acaban conformando la cultura, la fe e incluso las políticas públicas. Por lo tanto, es muy importante cómo se financia, distribuye y paga.",
+        "mediaAsPrimaryMedium": "Los medios digitales se han convertido en el principal canal de distribución de dicha expresión, y las plataformas de medios digitales se han convertido en las instituciones clave que organizan esta actividad.",
+        "unaccountableInstitutions": "Desafortunadamente, debido a los efectos de la red, las economías de escala, las regulaciones y los intereses políticos, hoy nos quedamos con un puñado de instituciones masivas que establecen los términos de cómo sucede esto. No tienen que rendir cuentas a los mecanismos políticos y de mercado normales.",
+        "filteredOnTheirTerms": "Como resultado, nuestras historias, expresiones e interacciones se gestionan y filtran en sus términos. Esto sigue generando un conjunto de problemas siempre cambiantes, ya sea",
+        "inflexible": "monetización inflexible, censura de discursos controvertidos, reparto desigual de las ganancias con los creadores y la audiencia, escasa innovación de la plataforma o falta de credibilidad con terceros desarrolladores."
       }
     },
     "goal": {
-      "title": "Goal",
+      "title": "Objetivo",
       "text": {
-        "arrangement": "We call for an arrangement where media platforms are accountable to the people they impact, which are primarily their users, be it as consumers, creatives, third party developer or workers.",
-        "accountability": "It is the absence of such accountability which is the fundamental source of any particular problem at any particular time."
+        "arrangement": "Pedimos un régimen en el que las plataformas de medios de comunicación sean responsables ante las personas a las que afectan, que son principalmente sus usuarios, ya sea como consumidores, creativos, desarrolladores de terceros o trabajadores.",
+        "accountability": "La ausencia de esa responsabilidad es la fuente fundamental de cualquier problema concreto en un momento determinado."
       }
     },
     "thesis": {
-      "title": "Thesis",
+      "title": "Tesis",
       "text": {
-        "coreThesis": "Our core thesis is that there are two basic challenges which must be addressed to achieve this goal, and that an appropriate application of contemporary distributed systems technology, including blockchains, smart contracts and tokens, is the right means to do so."
+        "coreThesis": "Nuestra tesis central es que hay dos desafíos básicos que deben ser abordados para lograr este objetivo, y que una aplicación adecuada con la tecnología contemporánea de sistemas distribuidos, incluyendo blockchains, contratos inteligentes y tokens, es el camino correcto para hacerlo."
       }
     },
     "wedge": {
-      "title": "The Wedge",
+      "title": "La Wedge",
       "text": {
-        "alternative": "First is the question of how to create an alternative from scratch in the face of platform externalities which make any new platform nearly useless, regardless of any of its inherent characteristics. The process of doing this sort of bootstrapping has historically been mostly an art, where success has rarely been reproducible.",
-        "blockchainTokens": "We believe that blockchain tokens, earned by and issued to early participants, have been shown to be extremely effective at mobilizing, integrating and motivating an international and dynamic community.",
-        "initialHurdle": "This has now repeatedly allowed nascent communities, like the Bitcoin community, to overcome the initial network effect hurdle [1, 2, 3]. There is no certainty that this will be sufficient, but we believe this mechanism is as promising as anything which is likely to have a chance in a long time."
+        "alternative": "En primer lugar está la cuestión de cómo crear una alternativa desde cero ante las particularidades de la plataforma, que hacen que cualquier nueva plataforma sea casi inútil, independientemente de sus características inherentes. El proceso de hacer este tipo de bootstrapping ha sido históricamente sobre todo un arte, donde el éxito rara vez ha sido reproducible.",
+        "blockchainTokens": "Creemos que los tokens de blockchain, ganados por los primeros participantes y emitidos por ellos, han demostrado ser extremadamente eficaces para movilizar, integrar y motivar a una comunidad internacional y dinámica.",
+        "initialHurdle": "Esto ha permitido en repetidas ocasiones que comunidades nacientes, como la de Bitcoin, superen el obstáculo inicial del efecto red [1, 2, 3]. No hay certeza de que esto sea suficiente, pero creemos que este mecanismo es tan prometedor como cualquier otro que pueda tener una oportunidad en mucho tiempo."
       }
     },
     "accountability": {
-      "title": "Accountability at scale",
+      "title": "Responsabilidad a escala",
       "text": {
-        "createAndSustain": "Second is the question of how to create and sustain accountability in such a platform when it actually reaches scale.",
-        "twoWays": "We understand there to be two fundamental ways that participants can hold institutions of any kind accountable: Voice and exit, in the tradition of Hirschman A. O. [4]."
+        "createAndSustain": "En segundo lugar, está la cuestión de cómo crear y mantener la responsabilidad en una plataforma de este tipo cuando realmente alcanza la escala.",
+        "twoWays": "Entendemos que hay dos formas fundamentales en las que los participantes pueden pedir responsabilidades a las instituciones de cualquier tipo: La palabra y la acción, en la tradición de Hirschman A. O. [4]."
       }
     },
     "voice": {
-      "title": "Voice",
+      "title": "La palabra",
       "text": {
-        "improveWithin": "Voice is the approach of attempting to improve or reform the functioning of an institution from within. The effectiveness of this depends on some capacity to both share reliable information with other members, and have some impact on internal governance processes. Current media platforms provide users no effective way of doing either.",
-        "infrastructure": "We believe that blockchains provide an organizational and economic infrastructure which can address both problems. The public, verifiable and immutable history of economic and administrative records, provides an excellent basis for users to understand the current and past state of the platform. This allows anyone to make incontestable claims about relevant facts and circumstances.",
-        "control": "Further, blockchain tokens allow us to make use and control of a platform inseparable, giving users an automatic seat at the table in deliberating over platform level decisions.",
-        "signWithCrypto": "All that is required to establish, exercise or transfer the capacity to participate in such activity, is the ability to sign messages with identifiable cryptographic keys. Perfectly reliable contracting gives a large, dynamic and unrestricted set of users the means of governing the platform. This can serve a wide range of purposes, such as undertaking projects, regulating participation in different formally specified roles, or even updating the institutional rules themselves. This integration of reliable contracting into the economic rails provides an organizational infrastructure much more in line with our objectives of inclusive control than the normal jurisdictional trust based infrastructure."
+        "improveWithin": "La palabra es el método para tratar de mejorar o reformar el funcionamiento de una institución desde dentro. Su eficacia depende de la capacidad de compartir información fiable con otros miembros y de influir en los procesos de gobernanza interna. Las plataformas mediáticas actuales no ofrecen a los usuarios ninguna de las dos cosas.",
+        "infrastructure": "Creemos que las cadenas de bloques proporcionan una infraestructura organizativa y económica que puede resolver ambos problemas. La historia pública, verificable e inmutable de los registros económicos y administrativos, proporciona una base excelente para que los usuarios comprendan el estado actual y pasado de la plataforma. Esto permite a cualquiera hacer afirmaciones incontestables sobre hechos y circunstancias relevantes.",
+        "control": "Además, los tokens de la cadena de bloques nos permiten hacer inseparables el uso y el control de una plataforma, dando a los usuarios un asiento automático en la mesa para deliberar sobre las decisiones a nivel de plataforma.",
+        "signWithCrypto": "Todo lo que se requiere para establecer, ejercer o transferir la capacidad de participar en dicha actividad, es la capacidad de firmar mensajes con claves criptográficas identificables. Una contratación perfectamente fiable proporciona a un conjunto amplio, dinámico y sin restricciones de usuarios los medios para gobernar la plataforma. Esto puede servir para una amplia gama de propósitos, como emprender proyectos, regular la participación en diferentes roles formalmente especificados, o incluso actualizar las propias reglas institucionales. Esta integración de la contratación fiable en los raíles económicos proporciona una infraestructura organizativa mucho más acorde con nuestros objetivos de control inclusivo que la infraestructura normal basada en la confianza jurisdiccional."
       }
     },
     "exit": {
-      "title": "Exit",
+      "title": "Retirada",
       "text": {
-        "exit": "Exit is the approach of entirely ending participation in an institution in favor of either joining or creating an alternative. The effectiveness of this depends on costs of leaving, and either joining or creating an alternative, all being low compared to the deprivation in the existing institution. This is currently not the case.",
-        "loweredCosts": "By building platforms based on free & open source software, open protocols and open data — as is the case with Blockchain systems, one dramatically lowers these costs. Since users control their own data, identity and assets, they have a much easier time joining new platforms, and even taking their peers with them.",
-        "competition": "Open protocols and data will make multi homing interfaces abundant, where users may not even need to switch, but instead use multiple platforms simultaneously, which encourages platform level competition [5].",
-        "reusability": "Even more dramatically, reliance on open source means that all the software capital of a platform can easily be reused, and since the entire organizational state is also public, entire ecosystems can be forked to create new alternative platforms with modified policies and objectives."
+        "exit": "La retirada es el planteamiento de poner fin por completo a la participación en una institución en favor de la adhesión o la creación de una alternativa. La eficacia de este planteamiento depende de que los costes de abandono y de adhesión o de creación de una alternativa sean bajos en comparación con las carencias de la institución existente. Este no es el caso actualmente.",
+        "loweredCosts": "Al construir plataformas basadas en software libre y de código abierto, protocolos abiertos y datos abiertos -como es el caso de los sistemas Blockchain- se reducen drásticamente estos costes. Dado que los usuarios controlan sus propios datos, identidad y activos, les resulta mucho más fácil unirse a nuevas plataformas, e incluso llevar a sus compañeros con ellos.",
+        "competition": "Los protocolos y datos abiertos harán que abunden las interfaces multihogar, en las que los usuarios ni siquiera tendrán que cambiar, sino que utilizarán varias plataformas simultáneamente, lo que fomenta la competencia a nivel de plataforma [5].",
+        "reusability": "Y lo que es aún más espectacular, es el hecho de basarse en el código abierto significa que todo el capital de software de una plataforma puede reutilizarse fácilmente, y como todo el estado de la organización también es público, se pueden bifurcar ecosistemas enteros para crear nuevas plataformas alternativas con políticas y objetivos modificados."
       }
     },
-    "ctaText": "This plan still has room for more people, so get involved by sending an <0>email</0> or joining us on <1>Discord</1> or <2>Reddit</2>.",
+    "ctaText": "Este plan aún tiene espacio para más personas, así que participa enviando un <0>email</0> o únete a nuestro <1>Discord</1> o <2>Reddit</2>.",
     "references": {
-      "title": "References",
-      "text": "<0>[1] Ersam, F. Blockchain Tokens and the dawn of the Decentralized Business Model. Medium. Aug 1, 2016.</0><0>[2] Srinivasan, B. S. Thoughts on Tokens. Medium. May 27, 2017.</0><0>[3] Dixon, C. Crypto Tokens: A Breakthrough in Open Network Design. Medium. June 1, 2017.</0><0>[4] Hirschman, Albert O. Exit, voice, and loyalty: Responses to decline in firms, organizations, and states. Vol. 25. Harvard university press, 1970.</0><0>[5] Rochet, Jean‐Charles, and Jean Tirole. “Platform competition in two‐sided markets.” Journal of the european economic association 1.4 (2003): 990–1029.</0>"
+      "title": "Referencias",
+      "text": "<0>[1] Ersam, F. Blockchain Tokens and the dawn of the Decentralized Business Model. Medium. 1 de agosto del 2016.</0><0>[2] Srinivasan, B. S. Thoughts on Tokens. Medium. 27 de mayo del 2017.</0><0>[3] Dixon, C. Crypto Tokens: A Breakthrough in Open Network Design. Medium. June 1, 2017.</0><0>[4] Hirschman, Albert O. Exit, voice, and loyalty: Respuestas al declive en empresas, organizaciones y estados. Volumen 25. Harvard university press, 1970.</0><0>[5] Rochet, Jean‐Charles, and Jean Tirole. “Platform competition in two‐sided markets.” Journal of the european economic association 1.4 (2003): 990–1029.</0>"
     }
   }
 }
